syntax = "proto3";

package proto;

option go_package = "legoas/proto";

service AccountService {
  rpc RegisterAccount(RegisterAccountRequest) returns (RegisterAccountResponse);
}

message RegisterAccountRequest {
  string account_name = 1;
  string password = 2;
}

message RegisterAccountResponse {
  string account_id = 1;
}
